dfir_rs/tests/compile-fail/stable/surface_singleton_mut_ungrouped_shared.stderr
error: Must use an explicit group `#{N}` to reference a singleton when other references use explicit groups.
 --> tests/compile-fail/stable/surface_singleton_mut_ungrouped_shared.rs:6:45
  |
6 |         source_iter([1_i32]) -> map(|x| x + #my_val) -> for_each(|_| {});
  |                                             ^
